--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Hello World</title>
-    </head>
-    <body>
-        <p>Lorain Lopez.</p>
-    </body>
+<head>
+<title>Hello World - Azure</title>
+</head>
+<meta charset="UTF-8">
+
+<body>
+
+<h1>Hello World - Azure- Lorain Lopez</h1>
+<h2>Version 2</h2>
+
+</body>
 </html>
